Added cross platform Python execution
ToDo: test if mac & linux behave the same (they should)